--- a/index.html
+++ b/index.html
@@ -23,19 +23,19 @@
 <section class="flex-container">
   <article class="supervisor"><h2>Supervisor</h2>
   <p>Monitors activity to identify project roadblocks</p>
-  <img src="./images/icon-supervisor.svg"></article>
+  <img src="./images/icon-supervisor.svg" alt="Supervisor Icon"></article>
 
   <article class="team-builder"><h2>Team Builder</h2>
   <p>Scans our talent network to create the optimal team for your project</p>
-  <img src="./images/icon-team-builder.svg"></article>
+  <img src="./images/icon-team-builder.svg" alt="Team Builder Icon"></article>
 
   <article class="karma"><h2>Karma</h2>
   <p>Regularly evaluates our talent to ensure quality</p>
-  <img src="./images/icon-karma.svg"></article>
+  <img src="./images/icon-karma.svg" alt="Karma Icon"></article>
 
   <article class="calculator"><h2>Calculator</h2>
   <p>Uses data from past projects to provide better delivery estimates</p>
-  <img src="./images/icon-calculator.svg"></article>
+  <img src="./images/icon-calculator.svg" alt="Calculator Icon"></article>
 </section>
 
   
